# lfsr128sum

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hardcores.h  io_utils.h  lfsr.h  lfsr_hash.h  lfsr_test_suite.hpp  main  main.cpp  progress_bar.h  tests.h  timer.h  version.h.in
.github/workflows/: release.yml
